Fix some page overflow issues

--- a/src/views/ev3/ev3.scss
+++ b/src/views/ev3/ev3.scss
@@ -250,7 +250,6 @@
     width: 100%;
     justify-content: space-between;
     align-items: flex-start;
-    flex-wrap: nowrap;
 }
 
 .step {
