--- a/src/views/microbit/microbit.scss
+++ b/src/views/microbit/microbit.scss
@@ -270,7 +270,6 @@
     width: 100%;
     justify-content: space-between;
     align-items: flex-start;
-    flex-wrap: nowrap;
 }
 
 .step {
